--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,17 +3,23 @@
 @import 'base/mixins';
 @import 'base/globales';
 @import 'base/utilidades';
+@import 'base/botones';
+@import 'base/darkMode';
 
-/*UI*/
-@import "layout/anuncios";
-@import "layout/contactar";
-@import "layout/footer";
-@import "layout/formularios";
-@import "layout/header";
-@import "layout/iconos";
-@import "layout/inferior";
-@import "layout/navegacion";
-@import "layout/testimoniales";
+/** UI **/
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/navegacion';
+@import 'layout/iconos';
+@import 'layout/anuncios';
+@import 'layout/contactar';
+@import 'layout/inferior';
+@import 'layout/testimoniales';
+@import 'layout/formularios';
+
+
+/** Paginas Internas **/
+@import 'internas/nosotros';
 
 
 
