--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -33,10 +33,10 @@ picture {
 
 h1, h2, h3 {
     font-family: $fuente_principal;
-    margin: calc($separacion / 2) 0;
+    margin: $separacion / 2 0;
     font-weight: 300;
     text-align: center;
-    
+
 }
 
 h1 {
