--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -1,9 +1,14 @@
 @import "variables";
 
 .seccion {
-    margin-top: calc($separacion / 2);
-    margin-bottom: calc($separacion / 2);
+    margin-top: $separacion / 2;
+    margin-bottom: $separacion / 2;
 }
 .contenido-centrado {
-    max-width: 800px;
+    max-width: 80rem;
+}
+
+.alinear-derecha {
+    display: flex;
+    justify-content: flex-end;
 }
