--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+
 // Fuentes
 $fuente_principal: 'Lato', sans-serif;
 
@@ -18,7 +19,11 @@ $grisOscuro: #333333;
 $separacion: 5rem;
 
 // Fuentes
+
 $delgada: 300;
 $regular : 400;
+$bold: 700;
+$black: 900;
+$regular: 400;
 $bold: 700;
 $black: 900
